--- a/PhpstormProjects/Matopeli/leaderboard.html
+++ b/PhpstormProjects/Matopeli/leaderboard.html
@@ -24,7 +24,7 @@
     </header>
 
     <main role="main" class="inner cover">
-        <table class="table table-striped">
+        <table class="table table-striped table-sm table-dark">
             <thead>
             <tr>
                 <th scope="col">Rank</th>
@@ -52,6 +52,49 @@
                 <td>Larry</td>
                 <td>20.01.18</td>
             </tr>
+            <tr>
+                <th scope="row">3</th>
+                <td>12</td>
+                <td>Larry</td>
+                <td>20.01.18</td>
+            </tr>
+            <tr>
+                <th scope="row">3</th>
+                <td>12</td>
+                <td>Larry</td>
+                <td>20.01.18</td>
+            </tr>
+            <tr>
+                <th scope="row">3</th>
+                <td>12</td>
+                <td>Larry</td>
+                <td>20.01.18</td>
+            </tr>
+            <tr>
+                <th scope="row">3</th>
+                <td>12</td>
+                <td>Larry</td>
+                <td>20.01.18</td>
+            </tr>
+            <tr>
+                <th scope="row">3</th>
+                <td>12</td>
+                <td>Larry</td>
+                <td>20.01.18</td>
+            </tr>
+            <tr>
+                <th scope="row">3</th>
+                <td>12</td>
+                <td>Larry</td>
+                <td>20.01.18</td>
+            </tr>
+            <tr>
+                <th scope="row">3</th>
+                <td>12</td>
+                <td>Larry</td>
+                <td>20.01.18</td>
+            </tr>
+
             </tbody>
         </table>
     </main>
